<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ticketapp.view.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_savedPlanFragment"
            app:destination="@id/savedPlanFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_homeFragment_to_exploreFragment"
            app:destination="@id/exploreFragment" />
        <action
            android:id="@+id/action_nav_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_homeFragment_to_cinemaDetailFragment"
            app:destination="@id/cinemaDetailFragment" />
        <action
            android:id="@+id/action_nav_home_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_discovery"
        android:name="com.example.ticketapp.view.ExploreFragment"
        android:label="@string/nav_explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_nav_discovery_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_exploreFragment_to_movieListFullFragment"
            app:destination="@id/movieListFullFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.example.ticketapp.view.SavedPlanFragment"
        android:label="@string/nav_saved_plans"
        tools:layout="@layout/fragment_saved_plan" >
        <action
            android:id="@+id/action_nav_bookmark_to_paymentMethodSelection"
            app:destination="@id/paymentMethodSelectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ticketapp.view.SettingsFragment"
        android:label="@string/txt_profile"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_profile_to_myTicket"
            app:destination="@id/myTicket" />
        <action
            android:id="@+id/action_nav_profile_to_nav_settings"
            app:destination="@id/nav_settings" />

    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.ticketapp.view.SettingsFragment"
        android:label="@string/nav_settings" >
        <action
            android:id="@+id/action_nav_settings_to_myTicket"
            app:destination="@id/myTicket" />
        <action
            android:id="@+id/action_nav_settings_to_personalData"
            app:destination="@id/personalDataFragment" />
    </fragment>

    <fragment
        android:id="@+id/personalDataFragment"
        android:name="com.example.ticketapp.view.PersonalDataFragment"
        android:label="@string/txt_personal_data"
        tools:layout="@layout/fragment_personal_data" >

        <action
            android:id="@+id/action_personalDataFragment_to_changePassword"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_personalDataFragment_to_updatePhone"
            app:destination="@id/updatePhoneFragment" />
        <action
            android:id="@+id/action_personalDataFragment_to_updateAddress"
            app:destination="@id/updateAddressFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.ticketapp.view.ChangePasswordFragment"
        android:label="Đổi Mật Khẩu"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/updatePhoneFragment"
        android:name="com.example.ticketapp.view.UpdatePhoneFragment"
        android:label="Cập Nhật Số Điện Thoại"
        tools:layout="@layout/fragment_update_phone" />
    <fragment
        android:id="@+id/updateAddressFragment"
        android:name="com.example.ticketapp.view.UpdateAddressFragment"
        android:label="Cập Nhật Địa Chỉ"
        tools:layout="@layout/fragment_update_address" />
    <fragment
        android:id="@+id/detailsFragment"

        android:name="com.example.ticketapp.view.Movie.DetailsFragment"
        android:label="@string/nav_details_movie"
        tools:layout="@layout/fragment_details" >

        <action
            android:id="@+id/action_detailsFragment_to_selectSeatFragment"
            app:destination="@id/selectSeatFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectSeatFragment"
        android:name="com.example.ticketapp.view.SelectSeatFragment"
        android:label="@string/nav_select_seat" >
        <action
            android:id="@+id/action_selectSeatFragment_to_paymentMethodSelection"
            app:destination="@id/paymentMethodSelectionFragment" />
        <action
            android:id="@+id/action_selectSeatFragment_to_nav_bookmark"
            app:destination="@id/nav_bookmark" />
    </fragment>
    <fragment
        android:id="@+id/paymentMethodSelectionFragment"
        android:name="com.example.ticketapp.view.PaymentMethodSelectionFragment"
        android:label="@string/txt_select_payment_method" >
        <action
            android:id="@+id/action_paymentMethodSelectionFragment_to_paymentMethod"
            app:destination="@id/paymentMethod" />
        <action
            android:id="@+id/action_paymentMethodSelectionFragment_to_momoQrPaymentFragment"
            app:destination="@id/momoQrPaymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/momoQrPaymentFragment"
        android:name="com.example.ticketapp.view.MoMoQrPaymentFragment"
        android:label="@string/txt_momo_qr_payment" >
        <action
            android:id="@+id/action_momoQrPaymentFragment_to_paymentSuccessDialog"
            app:destination="@id/paymentSuccessDialog" />
    </fragment>
    <fragment
        android:id="@+id/paymentMethod"
        android:name="com.example.ticketapp.view.PaymentMethod"
        android:label="@string/nav_payment_method" >
        <action
            android:id="@+id/action_paymentMethod_to_paymentSuccessDialog2"
            app:destination="@id/paymentSuccessDialog" />
    </fragment>
    <fragment
        android:id="@+id/ETicket"
        android:name="com.example.ticketapp.view.Ticket.ETicket"
        android:label="@string/txt_e_ticket" />
    <dialog
        android:id="@+id/paymentSuccessDialog"
        android:name="com.example.ticketapp.view.dialog.PaymentSuccessDialog"
        android:label="@string/nav_payment_success" >
        <action
            android:id="@+id/action_paymentSuccessDialog_to_ETicket"
            app:destination="@id/ETicket" />
    </dialog>
    <fragment
        android:id="@+id/myTicket"
        android:name="com.example.ticketapp.view.Ticket.MyTicket"
        android:label="@string/nav_my_ticket" >

        <action
            android:id="@+id/action_myTicket_to_ETicket"
            app:destination="@id/ETicket" />
    </fragment>
    <fragment
        android:id="@+id/upcomingTicketsFragment2"
        android:name="com.example.ticketapp.view.Ticket.UpcomingTicketsFragment"
        android:label="@string/nav_upcoming_tickets" />
    <fragment
        android:id="@+id/watchedTicketsFragment"
        android:name="com.example.ticketapp.view.Ticket.WatchedTicketsFragment"
        android:label="@string/nav_watched_tickets" />
    <fragment
        android:id="@+id/cinemaDetailFragment"
        android:name="com.example.ticketapp.view.CinemaDetailFragment"
        android:label="@string/txt_cinema_label"
        tools:layout="@layout/fragment_cinema_detail" />
    <fragment
        android:id="@+id/movieListFullFragment"
        android:name="com.example.ticketapp.view.MovieListFullFragment"
        android:label="Danh Sách Phim"
        tools:layout="@layout/fragment_movie_list_full" >
        <argument
            android:name="movieType"
            app:argType="string" />
        <action
            android:id="@+id/action_movieListFullFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.example.ticketapp.view.SearchResultFragment"
        android:label="SearchResultFragment" >
        <action
            android:id="@+id/action_searchResultFragment_to_nav_discovery"
            app:destination="@id/nav_discovery" />
    </fragment>

</navigation>